--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
         <link rel="stylesheet" href="css/960.css">
         <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script type="text/javascript" src="//use.typekit.net/xdn3zsr.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
         <!-- Shortcut Icon -->
         <link rel="shortcut icon" type="text/css" href="img/logo-black.png">
     </head>
@@ -72,8 +76,11 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
             <div id="content">
             	<div class="container box">
                 	<div class="row clearfix">
-                    	<h1>MHacks 2014 at The Big House</h1>
-                        <p>The biggest student hackathon meets<br>the biggest stadium in America</p>
+                    	<h1>MHacks is at The Big House</h1>
+                        <p>
+                            The biggest student hackathon meets<br>the biggest stadium in America.</p><p>
+                            <i class="icon-calendar icon-small"></i> Sep 20-22 &nbsp;&nbsp;<i class="icon-map-marker icon-small"></i> Ann Arbor, MI
+                        </p>
                         <img src="img/stadium-fade.jpg" style="width:100%;">
                     </div>
                 </div>
