--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
         <div id="mute-button" onclick="switchAudio();" style="background-size:cover; background-position:center;"></div>
 		<div id="main-content">
     		<div id="head">
-                <video id="background-video" loop preload="auto" controls autoplay>
+                <video id="background-video" loop preload="auto" autoplay>
                     <source src="./video/mhacks.mp4" type="video/mp4">
                     <source src="./video/mhacks.ogg" type="video/ogg">
                 </video>
