--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css?v=<?php print time(); ?>">
         <link rel="stylesheet" href="css/960.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/xdn3zsr.js"></script>
