--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
                         <a class="button-blue" onclick="ga('send', 'Links', 'Click', 'Signup Button');" href="http://mhacks.eventbrite.com">Sign Up Now</a>
                         <a class="button-clear venue-button" onClick="/* hideVideo(); */" onclick="ga('send', 'Links', 'Click', 'Venue Button');" style="margin-left:20px;" href="http://facebook.com/mhackshackathon">Sponsor MHacks</a>
                     </div>
-                    <div id="facepile">
+<!--                     <div id="facepile">
                         <div class="fb-facepile" data-href="http://facebook.com/MHacksHackathon" data-max-rows="1" data-size="large" data-width="300" data-colorscheme="dark"></div>
                     </div>
-                    <div id="location">
+ -->                    <div id="location">
                         <h1>Yes, We're not kidding...</h1>
                         <h1>MHacks 2014 @ <span style="color:#ffff00;">The Big House</span></h1>
                         <h1>Its going to be EPIC</h1>
