--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
                                                                                                                             
 -->
 
+
+
+
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -25,22 +29,32 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css?v=<?php print time(); ?>">
-        <link rel="stylesheet" href="css/960.css">
-        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/xdn3zsr.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
+
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/responsive.css">
         <!-- Shortcut Icon -->
         <link rel="shortcut icon" type="text/css" href="img/logo-black.png">
     </head>
+
+
+
+
+
+
     <body>    
         <!--[if lt IE 9]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
+
 		<div id="fb-root"></div>
+
         <script>(function(d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0];
           if (d.getElementById(id)) return;
@@ -48,70 +62,73 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
           js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=265693566885388";
           fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
+
+
         <div id="mute-button" onclick="switchAudio();" style="background-size:cover; background-position:center;"></div>
-		<div id="main-content">
-    		<div id="head">
-                <video id="background-video" loop preload="auto" autoplay>
-                    <source src="./video/mhacks.mp4" type="video/mp4">
-                    <source src="./video/mhacks.ogg" type="video/ogg">
-                </video>
-                <div class="title">
-                	<div id="logo">
-                        <a href="#"><img src="img/logo-white.png"></a>
-                    </div>
-                    <div id="info">
-                        <a class="button-blue" onclick="ga('send', 'Links', 'Click', 'Signup Button');" href="http://mhacks.eventbrite.com">Sign Up Now</a>
-                        <a class="button-clear venue-button" onClick="/* hideVideo(); */" onclick="ga('send', 'Links', 'Click', 'Venue Button');" style="margin-left:20px;" href="http://facebook.com/mhackshackathon">Sponsor MHacks</a>
-                    </div>
-<!--                     <div id="facepile">
-                        <div class="fb-facepile" data-href="http://facebook.com/MHacksHackathon" data-max-rows="1" data-size="large" data-width="300" data-colorscheme="dark"></div>
-                    </div>
- -->                    <div id="location">
-                        <h1>Yes, We're not kidding...</h1>
-                        <h1>MHacks 2014 @ <span style="color:#ffff00;">The Big House</span></h1>
-                        <h1>Its going to be EPIC</h1>
-                    </div>
-                </div>    
-            </div>
 
-            <div id="content">
-            	<div class="container box">
-                	<div class="row clearfix">
-                    	<h1>MHacks is at The Big House</h1>
-                        <p>
-                            The biggest student hackathon meets<br>the biggest stadium in America.</p><p>
-                            <i class="icon-calendar icon-small"></i> Sep 20-22 &nbsp;&nbsp;<i class="icon-map-marker icon-small"></i> Ann Arbor, MI
-                        </p>
-                        <img src="img/stadium-fade.jpg" style="width:100%;">
-                    </div>
-                </div>
-                <div class="container box">
-                    <div id="about" class="row clearfix box" style="padding-top:100px;">
-                        <div class="left" style="padding-top:10px;">
-                            <p>1500+ hackers</p>
-                            <p>36 hours</p>
-                            <p>$20000 in prizes</p>
-                            <p>Travel Reimbursement</p>
-                            <p>Endless Food</p>
-                            <p>So Much Swag</p>
-                        </div>
-                        <div class="right">
-                            <img src="img/endlessfood.jpg" style="">
-                            <div class="smallphotos">
-                                <img src="img/hack.jpg" style="width:48%;">
-                                <img src="img/getupandgo.jpg" style="width:48%; float:right;">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <section id="landing">
+            Bitch I'm Rick James
 
-    		<div id="footer">
-            	<div class="container">
-                	<p>&copy; <a href="#" onClick="mixpanel.track('MPowered Clicked');">MHacks 2013</a> | | Website by <a href="http://kabra.com" target="_blank" onClick="mixpanel.track('Pratik Designer Clicked');">Pratik Kabra</a> and <a href="http://www.thedanyaal.com" target="_blank">Danyaal Rangwala</a></p>
+<!--            <video id="background-video" loop preload="auto" autoplay>
+                    <source src="./video/bg.mp4" type="video/mp4">
+                    <source src="./video/bg.ogg" type="video/ogg">
+                </video> -->
+
+            <!-- <div id="facepile">
+                <div class="fb-facepile" data-href="http://facebook.com/MHacksHackathon" data-max-rows="1" data-size="large" data-width="300" data-colorscheme="dark">
                 </div>
-            </div>
-		</div>
+            </div> -->
+
+        </section>
+
+        <section id="stats">
+            <h2 class="page-header">
+                About Us
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac neque vulputate justo blandit rhoncus. Integer nec neque eros. Donec ut magna dui, ac adipiscing felis. In odio massa, porta ornare pulvinar volutpat, ullamcorper et metus. Proin neque metus, tincidunt at adipiscing id, mattis ut justo. Mauris varius justo ac libero ultrices tincidunt. Sed rutrum ultrices elit, non rhoncus libero aliquam et. Sed sollicitudin, odio ut gravida congue, leo enim vehicula diam, quis hendrerit velit mauris nec neque. Sed sagittis facilisis augue quis laoreet. Pellentesque fermentum augue vel elit faucibus tempor.
+
+            </p>
+        </section>
+
+        <section id="big-house">
+
+            In the big house, bitch.
+
+        </section>
+
+
+        <section id="logistics">
+
+            If you're not in Ann Arbor then fuck you.
+
+        </section>
+
+
+        <section id="sponsors">
+
+            ANDREESSEN ANDREESSEN ANDREESSEN ANDREESSEN ANDREESSEN 
+
+        </section>
+
+
+
+        		<div id="footer">
+                	<div class="container">
+                    	<p>&copy; <a href="#" onClick="mixpanel.track('MPowered Clicked');">MHacks 2013</a> | | Website by <a href="http://kabra.com" target="_blank" onClick="mixpanel.track('Pratik Designer Clicked');">Pratik Kabra</a> and <a href="http://www.thedanyaal.com" target="_blank">Danyaal Rangwala</a></p>
+                    </div>
+                </div>
+		  </div>
+
+
+
+
+
+
+
+
+
+
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -122,6 +139,12 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
           ga('create', 'UA-42066722-1', 'kabra.com');
           ga('send', 'pageview');
         </script>
+
+
+
+
+
+
 		<!-- Le Scripts -->
 		<script src="js/vendor/jquery-1.9.0.min.js"></script>
         <!--[if lt IE 9]>
