--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 		<div id="main-content">
     		<div id="head">
                 <video id="background-video" loop preload="auto" autoplay>
-                    <source src="./video/mhacks.mp4" type="video/mp4">
+                    <source src="http://d385d9sgj3wiu1.cloudfront.net/mhacks.mp4" type="video/mp4">
                     <source src="./video/mhacks.ogg" type="video/ogg">
                 </video>
                 <div class="title">
@@ -128,6 +128,10 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
             <script src="js/jquery.backgroundSize.js"></script>
         <![endif]-->
         <script src="js/jquery.sticky.js" type="text/javascript"></script>
+        <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="js/jquery.imagesloaded.min.js"></script>
+        <script type="text/javascript" src="js/bigvideo.js"></script>
+
         <script src="js/main.js?v=<?php print time(); ?>"></script>
     </body>
 </html>
