hol' up, hol' up, hol' up

--- a/index.html
+++ b/index.html
@@ -26,14 +26,11 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
         <title>MHacks 2014</title>
         <meta name="description" content="MHacks 2014">
         <meta name="viewport" content="width=device-width">
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css?v=<?php print time(); ?>">
-        <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
+        <link rel="stylesheet" href="css/main.css>">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/xdn3zsr.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 
@@ -67,17 +64,20 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
         <div id="mute-button" onclick="switchAudio();" style="background-size:cover; background-position:center;"></div>
 
         <section id="landing">
-            Bitch I'm Rick James
 
-<!--            <video id="background-video" loop preload="auto" autoplay>
-                    <source src="./video/bg.mp4" type="video/mp4">
-                    <source src="./video/bg.ogg" type="video/ogg">
-                </video> -->
+            <video id="background-video" loop preload="auto" autoplay>
+                <source src="./video/bg.mp4" type="video/mp4">
+                <source src="./video/bg.ogg" type="video/ogg">
+            </video>
 
             <!-- <div id="facepile">
                 <div class="fb-facepile" data-href="http://facebook.com/MHacksHackathon" data-max-rows="1" data-size="large" data-width="300" data-colorscheme="dark">
                 </div>
             </div> -->
+
+            <div class="landing-title">
+                The Most <span class="emphasis">Epic</span> Hackathon.
+            </div>
 
         </section>
 
