--- a/index.html
+++ b/index.html
@@ -75,8 +75,18 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
                 </div>
             </div> -->
 
-            <div class="landing-title">
-                The Most <span class="emphasis">Epic</span> Hackathon.
+            <div class="landing-info">
+                <div class="landing-title">
+                    The Most <span class="emphasis">Epic</span> Hackathon.
+                </div>
+
+                <div class="landing-logo">
+                    <img src="img/logo-white.png"/>
+                </div>
+
+                <div class="mhacks-button">
+                    Register Now
+                </div>
             </div>
 
         </section>
