fixing background video

--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
                 </div>
             </div>
 
+
+
+
+            <a href="#mute" class="mute">
+                Mute
+            </a>
+
+
+
         </section>
 
         <section id="stats">
