--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 
 
 
-            <a href="#mute" class="mute">
+            <a class="mute">
                 Mute
             </a>
 
