"Oh shit who that is? Dat Drake and Migos in the Versace Store!"

--- a/index.html
+++ b/index.html
@@ -100,19 +100,46 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 
         </section>
 
-        <section id="stats">
-            <h2 class="page-header">
-                About Us
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac neque vulputate justo blandit rhoncus. Integer nec neque eros. Donec ut magna dui, ac adipiscing felis. In odio massa, porta ornare pulvinar volutpat, ullamcorper et metus. Proin neque metus, tincidunt at adipiscing id, mattis ut justo. Mauris varius justo ac libero ultrices tincidunt. Sed rutrum ultrices elit, non rhoncus libero aliquam et. Sed sollicitudin, odio ut gravida congue, leo enim vehicula diam, quis hendrerit velit mauris nec neque. Sed sagittis facilisis augue quis laoreet. Pellentesque fermentum augue vel elit faucibus tempor.
 
-            </p>
+
+
+        <section id="stats">
+            <div class="container">
+                <h2>
+                    <span class="emphasis">1000+</span> Hackers
+                </h2>
+
+                <h2>
+                    <span class="emphasis">55+</span> Universities
+                </h2>
+
+                <h2>
+                    <span class="emphasis">$30,000+</span> in Prizes
+                </h2>
+
+                <h3>
+                    Hosted in beautiful <span class="emphasis">Ann Arbor, MI.</span> Too far for you? <span class="emphasis">We'll make it work.</span>
+                </h3>
+
+            </div>
+
         </section>
+
+
+
 
         <section id="big-house">
 
-            In the big house, bitch.
+            <div class="container">
+                <h3>The best part?</h3>
+                <h2>Hack in</h2>
+                <h1 class="emphasis">the Big House.</h1>
+
+                <div class="big-house-info">
+                    [It's the biggest in the country]
+                </div>
+
+            </div>
 
         </section>
 
