Yung based god came straight with the heater

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
                     <span class="emphasis">$30,000+</span> in Prizes
                 </h2>
 
-                <h3>
-                    Hosted in beautiful <span class="emphasis">Ann Arbor, MI.</span> Too far for you? <span class="emphasis">We'll make it work.</span>
-                </h3>
+                <h2>
+                    Travel is <span class="emphasis">on us.</span>
+                </h2>
 
             </div>
 
