--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 
 
         <section id="landing">
-
             <div class="background-video-wrapper">
                 <video id="background-video" loop preload="auto" autoplay>
                     <source src="http://d385d9sgj3wiu1.cloudfront.net/mhacks.mp4" type="video/mp4">
@@ -77,7 +76,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
                 </div>
             </div> -->
 
-            <div class="landing-info">
+            <div class="landing-block">
                 <div class="landing-title">
                     The Most <span class="emphasis">Epic</span> Hackathon.
                 </div>
@@ -89,16 +88,26 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
                 <div class="mhacks-button">
                     Register Now
                 </div>
+
+                <div class="landing-details">
+                    <div class="landing-date">
+                        September 20-22, 2013
+                    </div>
+
+                    <div class="landing-school">
+                        University of Michigan
+                    </div>
+
+                    <div class="landing-location">
+                        <i class="icon-map-marker"></i>
+                        &nbsp;Ann Arbor, MI
+                    </div>
+                </div>
             </div>
-
-
-
 
             <a class="mute">
                 Mute
             </a>
-
-
 
         </section>
 
