More cleanup. PRATIK

--- a/index.html
+++ b/index.html
@@ -157,7 +157,12 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 
         <section id="logistics">
 
-            If you're not in Ann Arbor then fuck you.
+            <div class="container">
+                <h2>The Logistics</h2>
+                <br/>
+                <h4><i class="icon-time"></i>&nbsp;36 Hours</h4>
+                <h4><i class="icon-map-marker"></i>&nbsp;Michigan Stadium, Ann Arbor, MI 48104</h4>
+                <h4><i class="icon-food"></i>&nbsp;All 6 Meals Provided</h4>
 
         </section>
 
@@ -170,12 +175,11 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 
 
 
-        		<div id="footer">
-                	<div class="container">
-                    	<p>&copy; <a href="#" onClick="mixpanel.track('MPowered Clicked');">MHacks 2013</a> | | Website by <a href="http://kabra.com" target="_blank" onClick="mixpanel.track('Pratik Designer Clicked');">Pratik Kabra</a> and <a href="http://www.thedanyaal.com" target="_blank">Danyaal Rangwala</a></p>
-                    </div>
-                </div>
-		  </div>
+		<div class="footer">
+        	<div class="container">
+            	&copy; <a href="#" onClick="mixpanel.track('MPowered Clicked');">MHacks 2013</a> | | Website by <a href="http://kabra.com" target="_blank" onClick="mixpanel.track('Pratik Designer Clicked');">Pratik Kabra</a> and <a href="http://www.thedanyaal.com" target="_blank">Danyaal Rangwala</a>
+            </div>
+        </div>
 
 
 
