--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
                                                                                                                             
 -->
 
-
+<!-- Designed by Shiva Kilaru -->
+<!-- shivakilaru.com -->
 
 
 
@@ -25,9 +26,9 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>MHacks 2014</title>
         <meta name="description" content="MHacks 2014">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css>">
+        <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/xdn3zsr.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -176,7 +177,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 
 		<div class="footer">
         	<div class="container">
-            	&copy; <a href="#" onClick="mixpanel.track('MPowered Clicked');">MHacks 2013</a> | | Website by <a href="http://kabra.com" target="_blank" onClick="mixpanel.track('Pratik Designer Clicked');">Pratik Kabra</a> and <a href="http://www.thedanyaal.com" target="_blank">Danyaal Rangwala</a>
+            	<a href="#" onClick="mixpanel.track('MPowered Clicked');">&copy; MHacks 2013</a> | | Website by <a href="http://kabra.com" target="_blank" onClick="mixpanel.track('Pratik Designer Clicked');">Pratik Kabra</a> and <a href="http://www.thedanyaal.com" target="_blank">Danyaal Rangwala</a>
             </div>
         </div>
 
@@ -211,6 +212,6 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
             <script src="js/jquery.backgroundSize.js"></script>
         <![endif]-->
         <script src="js/jquery.sticky.js" type="text/javascript"></script>
-        <script src="js/main.js?v=<?php print time(); ?>"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
