--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>MHacks 2014</title>
-        <meta name="description" content="MHacks 2014">
+        <meta name="description" content="MHacks | The Most Epic Hackathon">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
