--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 
         <section id="landing">
             <div class="background-video-wrapper">
-                <video id="background-video" loop preload="auto" autoplay poster="img/video-placeholder.png">
+                <video id="background-video" loop preload="auto" autoplay poster="img/video-placeholder.jpg">
                     <source src="http://d385d9sgj3wiu1.cloudfront.net/mhacks.mp4" type="video/mp4">
                     <source src="http://d385d9sgj3wiu1.cloudfront.net/mhacks.ogg" type="video/ogg">
                 </video>
