--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 
         <section id="sponsors">
 
-            ANDREESSEN ANDREESSEN ANDREESSEN ANDREESSEN ANDREESSEN 
+            Here are our sponsors.
 
         </section>
 
