--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@ and we'll give you a free flight if you're first!
                     </div>
 
                     <div class="landing-location">
-                        <i class="icon-map-marker"></i>
-                        &nbsp;Ann Arbor, MI
+                        <a href="https://www.google.com/maps/preview#!data=!1m4!1m3!1d3164!2d-83.747929!3d42.265876!4m25!2m11!1m10!1s0x0%3A0xd70008b6cc50d3ad!3m8!1m3!1d100940!2d-122.4376!3d37.7577!3m2!1i1024!2i768!4f13.1!5m12!1m11!1smichigan+stadium+near+michigan+stadium!4m8!1m3!1d100940!2d-122.4376!3d37.7577!3m2!1i1024!2i768!4f13.1!17b1" target="_blank" alt="MHacks Venue: Michigan Stadium">
+                            <i class="icon-map-marker"></i>
+                            &nbsp;Ann Arbor, MI
+                        </a>
                     </div>
                 </div>
             </div>
@@ -163,7 +165,10 @@ and we'll give you a free flight if you're first!
                 <h2>The Logistics</h2>
                 
                 <h4><i class="icon-time"></i>&nbsp;36 Hours (Friday night - Sunday morning)</h4>
-                <h4><i class="icon-map-marker"></i>&nbsp;&nbsp;Michigan Stadium, Ann Arbor, MI 48104</h4>
+                <h4><a href="https://www.google.com/maps/preview#!data=!1m4!1m3!1d3164!2d-83.747929!3d42.265876!4m25!2m11!1m10!1s0x0%3A0xd70008b6cc50d3ad!3m8!1m3!1d100940!2d-122.4376!3d37.7577!3m2!1i1024!2i768!4f13.1!5m12!1m11!1smichigan+stadium+near+michigan+stadium!4m8!1m3!1d100940!2d-122.4376!3d37.7577!3m2!1i1024!2i768!4f13.1!17b1" target="_blank" alt="MHacks Venue: Michigan Stadium">
+                        <i class="icon-map-marker"></i>
+                        &nbsp;&nbsp;Michigan Stadium, Ann Arbor, MI 48104</h4>
+                    </a>
                 <h4><i class="icon-food"></i>&nbsp;All 6 Meals Provided</h4>
 
                 <h3>FAQ</h3>
@@ -203,7 +208,8 @@ and we'll give you a free flight if you're first!
 
         <section id="sponsors">
 
-            ANDREESSEN ANDREESSEN ANDREESSEN ANDREESSEN ANDREESSEN 
+            <h3>Last year we had over 30 sponsors ranging from large corporations to small startups.</h3>
+            <h3>Do you want to have your company involved at MHacks? Contact us!</h3>
 
         </section>
 
@@ -211,12 +217,9 @@ and we'll give you a free flight if you're first!
 
 		<div class="footer">
         	<div class="container">
-            	<a href="#" onClick="mixpanel.track('MPowered Clicked');">&copy; MHacks 2013</a> | | Website by 
-                <a href="http://portfolio.shivakilaru.com" target="_blank">Shiva Kilaru,</a>
-                <a href="http://rjvir.com" target="_blank">Raj Vir,</a>
-                <a href="http://ottosipe.com" target="_blank">Otto Sipe,</a>
-                <a href="http://kabra.com" target="_blank" onClick="mixpanel.track('Pratik Designer Clicked');">Pratik Kabra,</a> and
-                <a href="http://www.thedanyaal.com" target="_blank">Danyaal Rangwala.</a>
+            	<a href="#">&copy; MHacks 2013</a> | | Powered by 
+                <a href="http://michiganhackers.com" target="_blank">Michigan Hackers</a> and
+                <a href="http://mpowered.umich.edu" target="_blank">MPowered.</a>
                   
             </div>
         </div>
