--- a/index.html
+++ b/index.html
@@ -207,9 +207,17 @@ and we'll give you a free flight if you're first!
 
 
         <section id="sponsors">
+            <div class="container">
+                <h3>Last year we had over 30 sponsors ranging from large corporations to small startups.</h3>
+                <h3>Do you want to have your company involved at MHacks? Contact us!</h3>
 
-            <h3>Last year we had over 30 sponsors ranging from large corporations to small startups.</h3>
-            <h3>Do you want to have your company involved at MHacks? Contact us!</h3>
+                <a class="sponsor" href="http://google.com" style="background-image:url(img/sponsors/Bain.png) "></a>
+                <a class="sponsor" href="http://google.com" style="background-image:url(img/sponsors/10gen.png) "></a>
+                <a class="sponsor" href="http://google.com" style="background-image:url(img/sponsors/Seelio.png) "></a>
+                <a class="sponsor" href="http://google.com" style="background-image:url(img/sponsors/Spark.png) "></a>
+                <a class="sponsor" href="http://google.com" style="background-image:url(img/sponsors/Mailchimp.png) "></a>
+                <div style="clear:both;"></div>
+            </div>
 
         </section>
 
