Ay who dat is????

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ and we'll give you a free flight if you're first!
 
         <section id="landing">
             <div class="background-video-wrapper">
-                <video id="background-video" loop preload="auto" autoplay poster="img/video-placeholder.jpg">
+                <video id="background-video" loop preload="auto" autoplay>
                     <source src="http://d385d9sgj3wiu1.cloudfront.net/mhacks.mp4" type="video/mp4">
                     <source src="http://d385d9sgj3wiu1.cloudfront.net/mhacks.ogg" type="video/ogg">
                 </video>
@@ -151,7 +151,7 @@ and we'll give you a free flight if you're first!
                 <h1 class="emphasis big-house">the Big House.</h1>
 
                 <div class="big-house-info">
-                    [It's the biggest in the country.]
+                    It doesn't get any bigger than this.
                 </div>
 
             </div>
@@ -170,6 +170,23 @@ and we'll give you a free flight if you're first!
                         &nbsp;&nbsp;Michigan Stadium, Ann Arbor, MI 48104</h4>
                     </a>
                 <h4><i class="icon-food"></i>&nbsp;All 6 Meals Provided</h4>
+
+                <div class="contact-info">
+                    <h3>Get in touch!</h3>
+
+                    <a href="https://twitter.com/mhacks" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mhacks</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+                    </script>
+
+                    <br/>
+
+                    <div class="fb-like" data-href="https://www.facebook.com/MHacksHackathon" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+
+                    <br/>
+
+                    <a class="email-us" href="mailto:hackathon@umich.edu" title="Email MHacks!" alt="Email MHacks!">Email us</a>
+
+                </div>
 
                 <h3>FAQ</h3>
 
