--- a/index.html
+++ b/index.html
@@ -223,8 +223,11 @@ and we'll give you a free flight if you're first!
         </section>
 
 
+
+
         <section id="sponsors">
             <div class="container">
+                <h2>Sponsorship</h2>
                 <h3>Last year we had over 30 sponsors ranging from large corporations to small startups.</h3>
                 <h3>Do you want to have your company involved at MHacks? Contact us!</h3>
 
