--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@ and we'll give you a free flight if you're first!
             <div class="container">
                 <h2>Sponsorship</h2>
                 <h3>Last year we had over 30 sponsors ranging from large corporations to small startups.</h3>
-                <h3>Do you want to have your company involved at MHacks? Contact us!</h3>
+                <h3>Do you want to have your company involved at MHacks? 
+                    <a href="mailto:hackathon@umich.edu" title="Email MHacks!" alt="Email MHacks!">Contact us!</a></h3>
 
                 <a class="sponsor" target="_blank" href="http://10gen.com" style="background-image:url(img/sponsors/10gen.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://appkey.com" style="background-image:url(img/sponsors/AppKey.jpg) "></a>
