Add some tracking

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ and we'll give you a free flight if you're first!
                     <img src="img/logo-white.png"/>
                 </div>
 
-                <a class="mhacks-button" href="http://mhacks.eventbrite.com"  target="_blank">
+                <a class="mhacks-button" href="http://mhacks.eventbrite.com" onclick="ga('send', 'EventBrite', 'Click');" target="_blank">
                     Register Now
                 </a>
 
@@ -285,8 +285,9 @@ and we'll give you a free flight if you're first!
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-42066722-1', 'kabra.com');
+          ga('create', 'UA-42728170-1', 'mhacks.org');
           ga('send', 'pageview');
+
         </script>
 
 
