--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ and we'll give you a free flight if you're first!
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>MHacks 2014</title>
+        <title>MHacks - 2013</title>
         <meta name="description" content="MHacks | The Most Epic Hackathon">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
