--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@ Tweet at us (@mhacks) with the hashtag #developersdevelopersdevelopers
 and we'll give you a free flight if you're first! 
 
 ----------------- -->
-
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -28,7 +26,7 @@ and we'll give you a free flight if you're first!
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>MHacks - 2013</title>
+        <title>MHacks: 2013</title>
         <meta name="description" content="MHacks | The Most Epic Hackathon">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
