--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ and we'll give you a free flight if you're first!
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <meta property="og:image" content="http://mhacks.org/img/fb-preview.png"/>
+        <meta property="og:image" content="http://mhacks.org/img/fb-preview2.png"/>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/xdn3zsr.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
