--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ and we'll give you a free flight if you're first!
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>MHacks: 2013</title>
-        <meta name="description" content="MHacks | The Most Epic Hackathon">
+        <meta name="description" content="MHacks: The Most Epic Hackathon. 1000 Hackers. 3 Days. Free Transportation. The Largest Stadium in the US.">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
