--- a/index.html
+++ b/index.html
@@ -237,10 +237,11 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                     <a href="mailto:hackathon@umich.edu" title="Email MHacks!" alt="Email MHacks!">Contact us!</a></h3>
 
                 <a class="sponsor" target="_blank" href="http://10gen.com" style="background-image:url(img/sponsors/10gen.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://a16z.com" style="background-image:url(img/sponsors/A16Z.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://appkey.com" style="background-image:url(img/sponsors/AppKey.jpg) "></a>
                 <a class="sponsor" target="_blank" href="http://www.baincapitalventures.com/startupacademy/" style="background-image:url(img/sponsors/Bain.png) "></a>
                 <a class="sponsor" target="_blank" href="http://barracuda.com" style="background-image:url(img/sponsors/Barracuda.png) "></a>
-                <a class="sponsor" target="_blank" href="http://benzinga.com" style="background-image:url(img/sponsors/benzinga.png) "></a>
+                <a class="sponsor" target="_blank" href="http://benzinga.com" style="background-image:url(img/sponsors/Benzinga.png) "></a>
                 <a class="sponsor" target="_blank" href="" style="background-image:url(img/sponsors/Canopy.png) "></a>
                 <a class="sponsor" target="_blank" href="http://cse.umich.edu" style="background-image:url(img/sponsors/CSE.png) "></a>
                 <a class="sponsor" target="_blank" href="http://dvp.vc" style="background-image:url(img/sponsors/DVP.png) "></a>
@@ -254,7 +255,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://readyforce.com" style="background-image:url(img/sponsors/Readyforce.png) "></a>
                 <a class="sponsor" target="_blank" href="http://ribbon.co" style="background-image:url(img/sponsors/Ribbon.jpg) "></a>
                 <a class="sponsor" target="_blank" href="http://seelio.com" style="background-image:url(img/sponsors/Seelio.png) "></a>
-                <a class="sponsor" target="_blank" href="http://sparkcapital.com" style="background-image:url(img/sponsors/Spark.png) "></a>
+                <a class="sponsor" target="_blank" href="http://www.annarborusa.org" style="background-image:url(img/sponsors/Spark.png) "></a>
                 <a class="sponsor" target="_blank" href="http://tokbox.com" style="background-image:url(img/sponsors/Tokbox.png) "></a>
                 <a class="sponsor" target="_blank" href="http://unbounce.com" style="background-image:url(img/sponsors/Unbounce.png) "></a>
                 <a class="sponsor" target="_blank" href="http://xby2.com" style="background-image:url(img/sponsors/Xby2.png) "></a>
