--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://appkey.com" style="background-image:url(img/sponsors/AppKey.jpg) "></a>
                 <a class="sponsor" target="_blank" href="http://www.baincapitalventures.com/startupacademy/" style="background-image:url(img/sponsors/Bain.png) "></a>
                 <a class="sponsor" target="_blank" href="http://barracuda.com" style="background-image:url(img/sponsors/Barracuda.png) "></a>
-                <a class="sponsor" target="_blank" href="http://benzinga.com" style="background-image:url(img/sponsors/Benzinga.png) "></a>
+                <a class="sponsor" target="_blank" href="http://benzinga.com" style="background-image:url(img/sponsors/benzinga.png) "></a>
                 <a class="sponsor" target="_blank" href="" style="background-image:url(img/sponsors/Canopy.png) "></a>
                 <a class="sponsor" target="_blank" href="http://cse.umich.edu" style="background-image:url(img/sponsors/CSE.png) "></a>
                 <a class="sponsor" target="_blank" href="http://dvp.vc" style="background-image:url(img/sponsors/DVP.png) "></a>
