--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@ and we'll give you a free flight if you're first!
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+
+
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@mhacks">
+        <meta property="og:url" content="http://mhacks.org">
+        <meta property="og:title" content="MHacks: 2013">
+        <meta property="og:description" content="MHacks: The Most Epic Hackathon. 1000 Hackers. 3 Days. Free Transportation. The Largest Stadium in the US.">
         <meta property="og:image" content="http://mhacks.org/img/fb-preview2.png"/>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/xdn3zsr.js"></script>
