--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ $$ | \_/ $$ |$$ |  $$ |$$ |  $$ |\$$$$$$  |$$ | \$$\ \$$$$$$  |
 <!-- -----------------
 
 http://www.youtube.com/watch?v=8To-6VIJZRE
-Tweet at us (@mhacks) with the hashtag #developersdevelopersdevelopers
-and we'll give you a free flight if you're first! 
+#developersdevelopersdevelopers
 
 ----------------- -->
 <!DOCTYPE html>
