--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <h3>Do you want to have your company involved at MHacks? 
                     <a href="mailto:hackathon@umich.edu" title="Email MHacks!" alt="Email MHacks!">Contact us!</a></h3>
 
+		<a class="sponsor big-sponsor" target="_blank" href="http://hearst.com" style="background-image:url(http://i5.minus.com/iQ5xF535wxDo0.png)"></a>
                 <a class="sponsor" target="_blank" href="http://10gen.com" style="background-image:url(img/sponsors/10gen.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://a16z.com" style="background-image:url(img/sponsors/A16Z.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://appkey.com" style="background-image:url(img/sponsors/AppKey.jpg) "></a>
