--- a/index.html
+++ b/index.html
@@ -240,33 +240,35 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <h2>Sponsorship</h2>
                 <h3>Last year we had over 30 sponsors ranging from large corporations to small startups.</h3>
                 <h3>Do you want to have your company involved at MHacks? 
-                    <a href="mailto:hackathon@umich.edu" title="Email MHacks!" alt="Email MHacks!">Contact us!</a></h3>
+                <a href="mailto:hackathon@umich.edu" title="Email MHacks!" alt="Email MHacks!">Contact us!</a></h3>
 
-		<a class="sponsor big-sponsor" target="_blank" href="http://hearst.com" style="background-image:url(http://i5.minus.com/iQ5xF535wxDo0.png)"></a>
+        		<a class="sponsor big-sponsor" target="_blank" href="http://hearst.com" style="background-image:url(http://i5.minus.com/iQ5xF535wxDo0.png)"></a>
+                <a class="sponsor" target="_blank" href="http://facebook.com" style="background-image:url(img/sponsors/Facebook.jpg) "></a>
                 <a class="sponsor" target="_blank" href="http://microsoft.com" style="background-image:url(img/sponsors/Microsoft.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://alchemyapi.com" style="background-image:url(img/sponsors/Alchemy.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://apple.com" style="background-image:url(img/sponsors/Apple.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://aws.amazon.com" style="background-image:url(img/sponsors/AWS.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://suitabletech.com" style="background-image:url(img/sponsors/Beam.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://epic.com" style="background-image:url(img/sponsors/Epic.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://imc.nl" style="background-image:url(img/sponsors/IMC.jpeg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://kik.com" style="background-image:url(img/sponsors/Kik.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://lob.com" style="background-image:url(img/sponsors/Lob.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://twilio.com" style="background-image:url(img/sponsors/Twilio.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://statefarm.com" style="background-image:url(img/sponsors/Statefarm.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://tellapart.com" style="background-image:url(img/sponsors/TellApart.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://theilfoundation.org" style="background-image:url(img/sponsors/Thiel.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://undergroundshirts.com" style="background-image:url(img/sponsors/UGP.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://workforce.com" style="background-image:url(img/sponsors/Workforce.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://wunderground.com" style="background-image:url(img/sponsors/Wunderground.jpg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://10gen.com" style="background-image:url(img/sponsors/10gen.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://a16z.com" style="background-image:url(img/sponsors/A16Z.png)" target="_blank"></a>
-                <a class="sponsor" target="_blank" href="http://appkey.com" style="background-image:url(img/sponsors/AppKey.jpg) "></a>
-                <a class="sponsor" target="_blank" href="http://www.baincapitalventures.com/startupacademy/" style="background-image:url(img/sponsors/Bain.png) "></a>
                 <a class="sponsor" target="_blank" href="http://barracuda.com" style="background-image:url(img/sponsors/Barracuda.png) "></a>
-                <a class="sponsor" target="_blank" href="http://benzinga.com" style="background-image:url(img/sponsors/benzinga.png) "></a>
-                <a class="sponsor" target="_blank" href="" style="background-image:url(img/sponsors/Canopy.png) "></a>
-                <a class="sponsor" target="_blank" href="http://cse.umich.edu" style="background-image:url(img/sponsors/CSE.png) "></a>
                 <a class="sponsor" target="_blank" href="http://dvp.vc" style="background-image:url(img/sponsors/DVP.png) "></a>
-                <a class="sponsor" target="_blank" href="http://facebook.com" style="background-image:url(img/sponsors/Facebook.jpg) "></a>
-                <a class="sponsor" target="_blank" href="http://github.com" style="background-image:url(img/sponsors/Github.png) "></a>
                 <a class="sponsor" target="_blank" href="http://greylocku.com" style="background-image:url(img/sponsors/Greylock.jpg) "></a>
-                <a class="sponsor" target="_blank" href="http://groupon.com" style="background-image:url(img/sponsors/Groupon.png) "></a>
                 <a class="sponsor" target="_blank" href="http://mailchimp.com" style="background-image:url(img/sponsors/Mailchimp.png) "></a>
-                <a class="sponsor" target="_blank" href="http://occipital.com" style="background-image:url(img/sponsors/Occipital.png) "></a>
-                <a class="sponsor" target="_blank" href="http://pearson.com" style="background-image:url(img/sponsors/Pearson.png) "></a>
-                <a class="sponsor" target="_blank" href="http://readyforce.com" style="background-image:url(img/sponsors/Readyforce.png) "></a>
                 <a class="sponsor" target="_blank" href="http://ribbon.co" style="background-image:url(img/sponsors/Ribbon.jpg) "></a>
-                <a class="sponsor" target="_blank" href="http://seelio.com" style="background-image:url(img/sponsors/Seelio.png) "></a>
                 <a class="sponsor" target="_blank" href="http://www.annarborusa.org" style="background-image:url(img/sponsors/Spark.png) "></a>
                 <a class="sponsor" target="_blank" href="http://tokbox.com" style="background-image:url(img/sponsors/Tokbox.png) "></a>
-                <a class="sponsor" target="_blank" href="http://unbounce.com" style="background-image:url(img/sponsors/Unbounce.png) "></a>
-                <a class="sponsor" target="_blank" href="http://xby2.com" style="background-image:url(img/sponsors/Xby2.png) "></a>
                 <div style="clear:both;"></div>
             </div>
 
