--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://apple.com" style="background-image:url(img/sponsors/Apple.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://aws.amazon.com" style="background-image:url(img/sponsors/AWS.jpg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://suitabletech.com" style="background-image:url(img/sponsors/Beam.png)" target="_blank"></a>
-                <a class="sponsor" target="_blank" href="http://epic.com" style="background-image:url(img/sponsors/Epic.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://epic.com" style="background-image:url(img/sponsors/Epic.jpeg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://imc.nl" style="background-image:url(img/sponsors/IMC.jpeg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://kik.com" style="background-image:url(img/sponsors/Kik.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://lob.com" style="background-image:url(img/sponsors/Lob.png)" target="_blank"></a>
